game logic and frontend backend mapping done
